# ProgramowanieObiektoweProjekt

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  fih.glb  persistent.settings  suzanne.glb
UML/: abstract_overview.puml  build_system_graph.puml  component_diagram.puml  memory_transfer_activity_diagram.puml  object_diagram.puml  state_machine.puml
UML/imgui/: detailed_diagram_imgui.puml
UML/sdl/: detailed_diagram_sdl.puml
UML/shaders/: simulation_frame_sequence.puml
UML/systems/: detailed_diagram_systems.puml
UML/vulkan/: abstract_overview_vulkan.puml
collaboration/: directory_idea.txt
src/: main.cpp  sphere_geometry_gen.hpp
src/imgui/: imgui_layer.cpp  imgui_layer.hpp
src/sdl/: sdl_lib.cpp  sdl_lib.hpp  sdl_window.cpp  sdl_window.hpp
src/shaders/: shared_code_shim.slang  shared_consts.hpp  shared_types.hpp
src/shaders/behavior/: object_behavior.slang  object_behavior_definitions.slang  object_behavior_dispatch.slang
src/shaders/radix_sort/: histogram.slang
src/shaders/vk_structs/: draw_indirect.slang
src/systems/: filesystem.hpp  ktx2_loader.cpp  ktx2_loader.hpp  main.cpp  persistent_settings.cpp  persistent_settings.hpp  systems.hpp  test
src/vulkan/: spirv_code.cpp  spirv_code.hpp  vk_buffer.cpp  vk_buffer.hpp  vk_compute_pipeline.cpp  vk_compute_pipeline.hpp  vk_context.cpp  vk_context.hpp  vk_device_fault_dump.cpp  vk_device_fault_dump.hpp  vk_dynamic_loader_storage.cpp  vk_graphics_pipeline.cpp  vk_graphics_pipeline.hpp  vk_image.cpp  vk_image.hpp  vk_pipeline_barriers.hpp  vk_pipeline_layout.cpp  vk_pipeline_layout.hpp  vk_prelude.hpp  vk_swapchain.cpp  vk_swapchain.hpp
src/vulkan/renderer/: mesh.cpp  mesh.hpp  mesh_pool.cpp  mesh_pool.hpp  pipelines_push_constants.hpp  radix_sort.hpp  render_targets.cpp  render_targets.hpp  simulation_buffers.cpp  simulation_buffers.hpp  simulation_render_graph_passes.cpp  simulation_render_graph_passes.hpp  vk_renderer.cpp  vk_renderer.hpp
src/vulkan/renderer/render_graph/: execution_plan.cpp  execution_plan.hpp  render_graph.cpp  render_graph.hpp  render_graph_pass.cpp  render_graph_pass.hpp  render_graph_pass_resources.cpp  render_graph_pass_resources.hpp  render_graph_v2.hpp
